created drop down menu

--- a/8 - Menu déroulant en CSS/menuderoulant.html
+++ b/8 - Menu déroulant en CSS/menuderoulant.html
@@ -7,18 +7,17 @@
 </head>
 <body>
 	<nav>
-		<ul class="nav">
-			<li>Home</a></li>
-            <li>Services</a>
-            <ul class='deroule'>
-                <li>Service 1</li>
-                <li>Service 2</li>
-                <li>Service 3</li>
-            </ul>
-            
+		<ul>
+			<li><a href="#">Home</a></li>
+            <li><a href="#">Services</a>
+            	<ul class='deroule'>
+                	<li><a href="#">Service 1</a></li>
+                	<li><a href="#">Service 2</a></li>
+                	<li><a href="#">Service 3</a></li>
+            	</ul>
             </li>
-			<li>Réferences</a></li>
-			<li>Contact</a></li>
+			<li><a href="#">Réferences</a></li>
+			<li><a href="#">Contact</a></li>
 		</ul>
 	</nav>
 </body>
