reworked static style

--- a/8 - Menu déroulant en CSS/menuderoulant.html
+++ b/8 - Menu déroulant en CSS/menuderoulant.html
@@ -4,10 +4,11 @@
 	<title>Menu simple</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	
 </head>
 <body>
 	<nav>
-		<ul>
+		<ul class="menu">
 			<li><a href="#">Home</a></li>
             <li><a href="#">Services</a>
             	<ul class='deroule'>
