modified services li class

--- a/8 - Menu déroulant en CSS/menuderoulant.html
+++ b/8 - Menu déroulant en CSS/menuderoulant.html
@@ -10,7 +10,7 @@
 	<nav>
 		<ul class="menu">
 			<li><a href="#">Home</a></li>
-            <li><a href="#">Services</a>
+            <li class="services"><a  href="#">Services</a>
             	<ul class='deroule'>
                 	<li><a href="#">Service 1</a></li>
                 	<li><a href="#">Service 2</a></li>
