prototype achieved ex 15

--- a/15 - Personnaliser une checkbox en CSS/toggleswitch.html
+++ b/15 - Personnaliser une checkbox en CSS/toggleswitch.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
         <input type="checkbox" id="switch">
-        <div id="toggle"> <label for="switch"></label></div>
+        <label for="switch"></label>
     
 </body>
 </html> 
