--- a/2 - HTML5 les balises sémantiques/exercice2.html
+++ b/2 - HTML5 les balises sémantiques/exercice2.html
@@ -20,8 +20,6 @@
 
     <section>
         <h2>Titre de la section</h2>
-    </section>
-
     <article>
         <h3>Titre de l'article 1</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
@@ -30,6 +28,7 @@
         <h3>Titre de l'article 2</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
     </article>
-
+</section>
+<footer> </footer>
 	</body>
 </HTML>
