--- a/5 - Menu horizontal simple/Exercice 5.html
+++ b/5 - Menu horizontal simple/Exercice 5.html
@@ -4,21 +4,21 @@
 	<title>Menu simple</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-          a:hover {
-            background-color: skyblue;
-      }
       .nav > li {
         display: inline-block;
         border : 1px solid black;
-        padding-left: 5%;
-        padding-right: 5%;
-        margin-left: 5%;
-        margin-right: 5%;
+        padding-left: 3%;
+        padding-right: 3%;
+        margin-left: 1%;
+        margin-right: 1%;
         background-size: 100%;
       }
-      a {
-          text-decoration: none;
-          color :blueviolet;
+
+      a { 
+        text-decoration: none;
+      }
+      li:hover {
+        background-color:skyblue;;
       }
  
 	</style>
