--- a/bootstrap-4/index.html
+++ b/bootstrap-4/index.html
@@ -14,8 +14,49 @@
     </head>
     <body>
         <div class="container-fluid p-0">
-            <!-- Votre code ici -->
+            <!-- Votre code ici : Astuce : votre premier jumbotron sera placé dans 
+                directement dans la premiere div déja présente puis le reste sera dans une div avec une 
+                classe container qui sera juste
+                 en dessous du premier jumbotron (ce qui réduira la taille de manière dynamique)-->
+                
+            <div class="jumbotron bg-jumb-main m-0">
+            <h1 class="offset-2">JUMBOTRON</h1>
+            <p class="offset-2">Un sous titre juste là pour l'exemple</p>
+            <a class="btn btn-primary offset-2" href="#" role="button">Aller là bas</a>
+            </div>
         </div>
-
+        <div class='container p-0 mt-0 text-center'>
+            <div class='row bg-light'>
+                <div class='col-4 pl-0'>
+                    <h2>Titre 1</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem sapiente quidem asperiores 
+            repudiandae maiores eius sed maxime? Ullam natus quaerat consequatur fuga voluptate vel illum amet, 
+            debitis atque at.
+                    </p>
+                </div>
+                <div class="col-4">
+                    <h2>Titre 2</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem sapiente quidem asperiores 
+            repudiandae maiores eius sed maxime? Ullam natus quaerat consequatur fuga voluptate vel illum amet, 
+            debitis atque at.
+                    </p>
+                </div>
+                <div class="col-4 pr-0">
+                    <h2>Titre 3</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem sapiente quidem asperiores 
+            repudiandae maiores eius sed maxime? Ullam natus quaerat consequatur fuga voluptate vel illum amet, 
+            debitis atque at.
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+        <div class="jumbotron bg-jumb-inter col-12">
+            <h1>Mon titre</h1>
+            <p>Un sous-titre pour l'exemple</p>
+            <a class="btn btn-primary" href="#" role="button">Aller là bas</a></div>
+        </div>
+        
+    </div>
+    </div>
     </body>
 </html>
