--- a/bootstrap-4/index.html
+++ b/bootstrap-4/index.html
@@ -25,8 +25,8 @@
             <a class="btn btn-primary offset-2" href="#" role="button">Aller là bas</a>
             </div>
         </div>
-        <div class='container p-0 mt-0 text-center'>
-            <div class='row bg-light'>
+        <div class='container p-0 mt-0'>
+            <div class='row bg-light text-center'>
                 <div class='col-4 pl-0'>
                     <h2>Titre 1</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatem sapiente quidem asperiores 
@@ -50,10 +50,10 @@
                 </div>
             </div>
             <div class="row">
-        <div class="jumbotron bg-jumb-inter col-12">
-            <h1>Mon titre</h1>
-            <p>Un sous-titre pour l'exemple</p>
-            <a class="btn btn-primary" href="#" role="button">Aller là bas</a></div>
+        <div class="jumbotron bg-jumb-inter col-12 text-left">
+            <h1 class="offset-9">Mon titre</h1>
+            <p class="offset-9">Un sous-titre pour l'exemple</p>
+            <a class="btn btn-primary offset-9" href="#" role="button">Aller là bas</a></div>
         </div>
         
     </div>
