--- a/bootstrap-5/index.html
+++ b/bootstrap-5/index.html
@@ -45,8 +45,11 @@
             <div class="row">
             <div class="col-2 bg-secondary pl-0 pr-0 pb-0">
                 <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
-                    <a class="nav-link text-white pb-3 pt-3" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Accueil</a>
-                    <a class="nav-link text-white pb-3 pt-3" id="v-pills-about-tab" data-toggle="pill" href="#v-pills-about" role="tab" aria-controls="v-pills-about" aria-selected="false">A propos</a>
+                    <!--To make the tabs toggleable, add the data-toggle="tab" attribute to each link. 
+                    Then add a .tab-pane class with a unique ID for every tab and wrap them inside a <div> element with class .tab-content.
+If you want the tabs to fade in and out when clicking on them, add the .fade class to .tab-pane:-->
+                    <a class="nav-link text-white pb-3 pt-3" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="false">Accueil</a>
+                    <a class="nav-link text-white pb-3 pt-3" id="v-pills-about-tab" data-toggle="pill" href="#v-pills-about" role="tab" aria-controls="v-pills-about" aria-selected="true">A propos</a>
                     <a class="nav-link text-white pb-3 pt-3" id="v-pills-contact-tab" data-toggle="pill" href="#v-pills-contact" role="tab" aria-controls="v-pills-contact" aria-selected="false">Nous contacter</a>
                 </div>
             </div>          
