added readme commentary

--- a/bootstrap-7/index.html
+++ b/bootstrap-7/index.html
@@ -13,6 +13,12 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
+
+<!--# Bootstrap 7 : carousel
+Utilisez les images présentes dans le dossier images pour 
+creer un carousel simple puis un carousel avec des fleches permettant de choisir l'image affichée.
+ Vous pouvez aller plus loin en lisant la documentation sur les carousels afin d'ajouter d'autres éléments dans vos carousels. 
+-->
         <div class="row justify-content-center">
             <h3>Carousel simple</h3>
         </div>
