added commentary on card-columns

--- a/bootstrap-6/index.html
+++ b/bootstrap-6/index.html
@@ -98,7 +98,15 @@
 
             </div>
 
-
+<!--<div class="card-columns">
+  <div class="card"> 
+      <img class="card-img" src="blabla"> 
+  </div> 
+  <div class="card"> 
+      <img class="card-img" src="blabla"> 
+  </div> 
+</div>
+  était plus simple, mais j'suis partie sur autre chose-->
 
 
 
