--- a/bootstrap-7/index.html
+++ b/bootstrap-7/index.html
@@ -18,16 +18,63 @@
 Utilisez les images présentes dans le dossier images pour 
 creer un carousel simple puis un carousel avec des fleches permettant de choisir l'image affichée.
  Vous pouvez aller plus loin en lisant la documentation sur les carousels afin d'ajouter d'autres éléments dans vos carousels. 
--->
+--><div class="container-fluid">
         <div class="row justify-content-center">
-            <h3>Carousel simple</h3>
+            <h3 class="col-12 text-center">Carousel simple</h3>
+            <div id="carouselSimple" class="carousel slide col-12" data-ride="carousel">
+                <div class="carousel-inner"> <!--Adds slides to the carousel-->
+                  <div class="carousel-item active">
+                    <img class="d-block w-60" src="images/card1.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-60" src="images/card2.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-60" src="images/card3.jpg" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-60" src="images/card4.jpg" alt="Fourth slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-60" src="images/card5.jpg" alt="Fifth slide">
+                  </div>
+                </div>
+              </div>
         </div>
+    
         <!-- Code du carousel simple -->
         <div class="row justify-content-center">
-            <h3>Carousel avec fleches</h3>
+            <h3 class="col-12 text-center">Carousel avec fleches</h3>
+            <div id="carouselFleche" class="carousel slide col-12" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-70" src="images/card1.jpg" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-70" src="images/card2.jpg" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-70" src="images/card3.jpg" alt="Third slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-70" src="images/card4.jpg" alt="Fourth slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-70" src="images/card5.jpg" alt="Fifth slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselFleche" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselFleche" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
         </div>
         <!-- Code du carousel avec des fleches de controle -->
-
+</div>
 
 
     </body>
