--- a/bootstrap-8/index.html
+++ b/bootstrap-8/index.html
@@ -13,6 +13,65 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
+<!--Premier :
+    Créez 3 éléments de 4 colonnes chacun avec un bouton au dessus(voir bootstrap8-1.png).
+    Chaque bouton déroule/réenroule le texte présent dessous : collapse simple-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-4">
+            <button class='btn btn-primary col-4' type="button" data-toggle="collapse" data-target="#el1" aria-expanded="false" aria-controls="el">
+                mon bouton
+            </button>
+            <div class='collapse' id="el1">
+                <div class='card card-body'>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque atque 
+                    voluptatum sapiente magnam sint numquam facere minima ad nemo dolore
+                    debitis ut distinctio fuga quia facilis totam, tempore praesentium itaque.
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <button class='btn btn-primary col-4' type="button" data-toggle="collapse" data-target="#el2" aria-expanded="false" aria-controls="el2">
+                mon bouton
+            </button>
+            <div class='collapse' id="el2">
+                <div class='card card-body'>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque atque 
+                    voluptatum sapiente magnam sint numquam facere minima ad nemo dolore
+                    debitis ut distinctio fuga quia facilis totam, tempore praesentium itaque.
+                </div>
+            </div>
+        </div>
+        <div class="col-4">
+            <button class='btn btn-primary col-4' type="button" data-toggle="collapse" data-target="#el3" aria-expanded="false" aria-controls="el3">
+                mon bouton
+            </button>
+            <div class='collapse' id="el3">
+                <div class='card card-body'>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque atque 
+                    voluptatum sapiente magnam sint numquam facere minima ad nemo dolore
+                    debitis ut distinctio fuga quia facilis totam, tempore praesentium itaque.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!--Deuxieme :
+    Créez Accordéon de 3 éléments qui se dérouleront au clic(voir bootstap-2.png).-->
+
+
+
+<!--Troisieme :
+    Mixez les 2 exercices précédents : La présentation ressemblera au premier exercice mais lorsque l'un des boutons sera cliqué, 
+    les autres éléments se replieront s'ils sont dépliés.(un seul élément pourra être déplié à la fois)  
+    (data-parent est votre ami)  
+-->
+
+
+
 
     </body>
 </html>
