--- a/bootstrap-10/index.html
+++ b/bootstrap-10/index.html
@@ -12,8 +12,18 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="script.js"></script>
     </head>
-    <body data-spy="scroll" data-target="#id_de_votre_navbar">
-        <!-- Votre navbar ici -->
+    <body data-spy="scroll" data-target="#navigation">
+        <!-- Votre navbar ici 
+            Bootstrap fourni un composant très utile pour que vos utilisateurs puissent suivre leur progression sur une page : le Scrollspy.
+    A partir de la page HTML présente, créez une navbar dont les éléments vont être activés en fonction du scroll de l'utilisateur.
+    La navbar doit évidement rester constamment affichée en haut de l'écran lorsque l'utilisateur scroll vers le bas de la page.-->
+    <nav id="navigation" class="navbar bg-light fixed-top">
+        <a class="nav-link" href='#Accueil'> Accueil </a>
+        <a class="nav-link" href="#Valeurs"> Valeurs </a>
+        <a class="nav-link" href="#Contact"> Contact </a>
+
+    
+    </nav>
 
         <div class="container">
             <div id="Accueil" style="padding-top: 80px;">
