--- a/bootstrap-10/index.html
+++ b/bootstrap-10/index.html
@@ -17,11 +17,12 @@
             Bootstrap fourni un composant très utile pour que vos utilisateurs puissent suivre leur progression sur une page : le Scrollspy.
     A partir de la page HTML présente, créez une navbar dont les éléments vont être activés en fonction du scroll de l'utilisateur.
     La navbar doit évidement rester constamment affichée en haut de l'écran lorsque l'utilisateur scroll vers le bas de la page.-->
-    <nav id="navigation" class="navbar bg-light fixed-top">
-        <a class="nav-link" href='#Accueil'> Accueil </a>
-        <a class="nav-link" href="#Valeurs"> Valeurs </a>
-        <a class="nav-link" href="#Contact"> Contact </a>
-
+    <nav id="navigation" class="navbar bg-light fixed-top justify-content-center">
+        <div class=' nav nav-pills '>
+            <a class="nav-link" href='#Accueil'> Accueil </a>
+            <a class="nav-link" href="#Valeurs"> Valeurs </a>
+            <a class="nav-link" href="#Contact"> Contact </a>
+        </div>
     
     </nav>
 
