--- a/bootstrap-9/index.html
+++ b/bootstrap-9/index.html
@@ -40,9 +40,9 @@ Pour aller plus loin, faites quelques recherches pour afficher une video youtube
         </div>
         <div class="modal-body">
             <div class="embed-responsive-item"> <!--ne pas oublier item !-->
-                <iframe  src="https://www.youtube.com/embed/-vr8SJTlACo" frameborder="0" allowfullscreen></iframe>
+              <iframe  width="100%" height="100%" frameborder="0" src="https://www.dailymotion.com/embed/video/x6kuk8f" allowfullscreen > </iframe>
             </div>
-            <p>Découvrez la couture avec ce super tuto !</p>
+            <p>Découvrez le namounamou qui joue à la basse !</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
