created article header

--- a/Integration - Reproduire une page/index.html
+++ b/Integration - Reproduire une page/index.html
@@ -10,14 +10,15 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"></script>
     </head>
+
 <body>
     <header class='container-fluid shadow'>
         <div class='row'>
-            <div class='col-12 navbar navbar-expend border-bottom border-light' id='navbar1'>
+            <nav class='col-12 navbar navbar-expend border-bottom border-light' id='navbar1'>
                 <img id="medlogo" src='medium.svg'>
                 <a class='nav-link offset-9'>Sign in</a>
                 <button type="button" class="btn btn-outline-primary">Get started</button>
-            </div>
+            </nav>
             <div class='col-12 navbar navbar-expend' id="navbar2">
                 <a class='navbar-brand'>
                 <img src='one-zero.png' id='onezerologo'>
@@ -30,8 +31,17 @@
                         <a class="nav-item nav-link text-secondary" href="#">ABOUT</a>
                     </nav>
             </div>
-
         </div>
     </header>
+    <article class='container mt-5 justify-content-center d-flex'>
+        <header id='entete-article' class='row' >
+        <h1>How ‘Digital Nomads’ Game the System to Work in Paradise</h1>
+        <h4 class="text-secondary">Visa scams and tax evasion are common as locals struggle with a low minimum wage</h4>
+        <div class='row'>
+            <img src="harry.jpg" id="harry" class='ml-3'> 
+            <p></p>
+        </div>
+        </header>
+    </article>
 </body>
 </html>
