--- a/JS4-Test/index.html
+++ b/JS4-Test/index.html
@@ -10,7 +10,7 @@
             egal3= c>=a;
             egal4= c!==d;
             egal5= c===d;
-            console.log('a est égal à la valeur de b ?',egal1);
+            console.log('a est égal à la valeur de b ?',egal1); // directement mettre l'expression est une meilleure pratique
             console.log('a diff en valeur et type à b ?', egal2);
             console.log('c est supérieur ou égal à a ?',egal3);
             console.log('c est différent en valeur à d ?', egal4);
