--- a/JS11-Manip-DOM/index.html
+++ b/JS11-Manip-DOM/index.html
@@ -21,8 +21,17 @@
         <input type="submit" value="Masquer" onClick="hideAllDivs()" />
     </p>
     <p>
-        Titre n°: <input type="text" id="title" />
+        Titre n°: <input type="number" id="title" />
         <input type="submit" value="Afficher" onClick="alertTitle()" />
+    </p>
+    <p>
+        Titre n°: <input type="number" id="title" />
+        <input type="submit" value="Supp" onClick="deleteTitle()" />
+    </p>
+    <p>
+        Titre n°: <input type="number" id="nbtitle" />
+        <input type="text" id='contenu' />
+        <input type="submit" value="ajouter titre" onClick="defineTitle()" />
     </p>
 </body>
 
