--- a/JS6-Et-si-encore/index.html
+++ b/JS6-Et-si-encore/index.html
@@ -5,7 +5,7 @@
         <title>Exo 6 JS</title>
         <script>
             let age = Number(prompt("T'as quel âge ?"));
-            if (age>=18 & age<=70) {
+            if (age>=18 && age<=70) {
                 alert('You\'re in !');
             }
             else {
