finished ex3 lvl 3

--- a/JS_lvl3_Ex3/index.html
+++ b/JS_lvl3_Ex3/index.html
@@ -8,10 +8,10 @@
 <body>
     <p id = "test1">Coucou, c'est le mal de tête hihi.</p>
     <button id = "test_a-d">Tester la chaine</button>
-    <p id = "test2">Yo, moi c'est Bewiwi, allez, @+ !</p>
+    <p id = "test2">Yo, moi c'est Bewiwi, allez, + !</p>
     <button id = "test_1_@">Tester la chaîne</button>
-    <p id = "test3">J'ai 26 ans depuis le 4 mai esh</p>
-    <button id = "test_chiffre">Tester le chaîne</button>
+    <p id = "test3">J'ai papou ans depuis le frite mai esh</p>
+    <button id = "test_chiffre">Tester la chaîne</button>
     <p id = "test4">Mon mail c'est marie.a.s45@gmail.com</p>
     <button id = "remplace_chiffre">Remplacer les chiffres</button>
 
