chrono v2 : created lap feature

--- a/JS_lvl3_Ex6/index.html
+++ b/JS_lvl3_Ex6/index.html
@@ -44,10 +44,13 @@
       </div>
 
       <button id="start" onclick="start()">Start</button>
+      <button id="tour" onclick="tour()" >Tour</button>
       <button id="stop" onclick="stop()" >Stop</button>
       <button id="reset" onclick="reset()" >Reset</button>
-      <script src = 'script.js'></script>
+     <div class = "tours"> 
+       <h2>Vos temps : </h2>
+     </div>
     </div>
-    
+ <script src = 'script.js'></script>
   </body>
 </html>
