--- a/JS_lvl3_Ex9/index.html
+++ b/JS_lvl3_Ex9/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
-    <p id='summary'>Lorem ipsum...</p>
+    <p id="summary" style="display: none;">Lorem ipsum...</p>
+    <p id='full'> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam totam repudiandae quae corporis
+        recusandae dolores ex debitis labore, consectetur optio quasi consequatur numquam iure cupiditate ea voluptas!
+        Atque, assumenda e Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque aliquid distinctio amet
+        repellendus quas inventore ipsa, aliquam odio dolorum praesentium sunt odit fugiat accusamus, ratione quibusdam.
+        Soluta accusamus natus nesciunt!</p>
     <button id='showmore'>Voir plus</button>
-    <p id='full' style="display: none;"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam totam repudiandae quae corporis recusandae dolores ex debitis labore, consectetur optio quasi consequatur numquam iure cupiditate ea voluptas! Atque, assumenda e Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque aliquid distinctio amet repellendus quas inventore ipsa, aliquam odio dolorum praesentium sunt odit fugiat accusamus, ratione quibusdam. Soluta accusamus natus nesciunt!</p>
 
     <script src="script.js"></script>
 
