first part done

--- a/JSBosslvl3_Matrice de formes/index.html
+++ b/JSBosslvl3_Matrice de formes/index.html
@@ -46,8 +46,10 @@
         <td class="carre"></td>
         </tr>
     </table>
-    <script src='script.js'></script>
+    <button id = "remplir">Remplir</button>
+    <button id = "vider">Vider</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src='script.js'></script>
 </body>
 
 </html>
